Fix long URLs from getting cut off
close #39

--- a/sites/all/themes/cas/sass/_main.scss
+++ b/sites/all/themes/cas/sass/_main.scss
@@ -926,6 +926,7 @@ html body.navbar-administration
 	color:$blue;
 	line-height:120%;
 	padding:50px 30px;
+	word-wrap: break-word;
 
 	a
 	{
